[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://Player/UI/CenterInfo/center_info.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bjfkuy3331n38" path="res://Player/UI/CenterInfo/Bars/PlayerHealthBarUnder.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cvash6mtx23c" path="res://Player/UI/CenterInfo/Bars/PlayerAmmoBar.png" id="3"]
[ext_resource type="Script" path="res://Player/UI/TopInfo/UnderBarCode.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://esyoiostsiij" path="res://Player/UI/CenterInfo/Bars/PlayerHealthBar.png" id="5"]
[ext_resource type="Texture2D" uid="uid://h4iud2w0atru" path="res://Player/UI/CenterInfo/Bars/PlayerEnergyBar.png" id="6"]

[node name="CenterInfo" type="Control" node_paths=PackedStringArray("HealthBar", "HealthBarUnder", "EnergyBar", "EnergyBarUnder", "AmmoBar", "AmmoBarUnder")]
layout_direction = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
HealthBar = NodePath("Health/HealthBarUnder/HealthBar")
HealthBarUnder = NodePath("Energy/EnergyBarUnder")
EnergyBar = NodePath("Energy/EnergyBarUnder/EnergyBar")
EnergyBarUnder = NodePath("Energy/EnergyBarUnder")
AmmoBar = NodePath("Ammo/AmmoBarUnder/AmmoBar")
AmmoBarUnder = NodePath("Ammo/AmmoBarUnder")

[node name="Control" type="Control" parent="."]
clip_contents = true
anchors_preset = 0
offset_left = -109.0
offset_top = -4.0
offset_right = 110.0
offset_bottom = 137.0

[node name="Under2" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = -1.0
offset_top = -108.0
offset_right = 218.0
offset_bottom = 112.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("2")
texture_progress = ExtResource("3")
tint_under = Color(0.611765, 0.443137, 0.811765, 1)
tint_progress = Color(0.596078, 0.180392, 0.133333, 1)
radial_initial_angle = 180.0
radial_fill_degrees = 90.0

[node name="Under3" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = -108.0
offset_right = 213.0
offset_bottom = 109.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("2")
texture_progress = ExtResource("3")
tint_under = Color(0.611765, 0.443137, 0.811765, 1)
tint_progress = Color(0.596078, 0.180392, 0.133333, 1)
radial_initial_angle = 180.0
radial_fill_degrees = 90.0

[node name="Ammo" type="Control" parent="."]
clip_contents = true
anchors_preset = 0
offset_left = -33.0
offset_top = 85.0
offset_right = 32.0
offset_bottom = 134.0

[node name="AmmoBarUnder" type="TextureProgressBar" parent="Ammo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.515
anchor_top = -1.758
anchor_right = 0.515
anchor_bottom = -1.758
offset_left = -106.475
offset_top = -95.858
offset_right = 106.525
offset_bottom = 114.142
value = 80.0
fill_mode = 5
nine_patch_stretch = true
texture_under = ExtResource("2")
texture_progress = ExtResource("3")
tint_under = Color(0.611765, 0.443137, 0.811765, 1)
tint_progress = Color(0.596078, 0.180392, 0.133333, 1)
radial_initial_angle = 198.0
radial_fill_degrees = 36.0
script = ExtResource("4")

[node name="AmmoBar" type="TextureProgressBar" parent="Ammo/AmmoBarUnder"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.515
anchor_top = 0.5
anchor_right = 0.515
anchor_bottom = 0.5
offset_left = -110.475
offset_top = -105.038
offset_right = 102.525
offset_bottom = 104.962
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("3")
tint_progress = Color(0.827451, 0.423529, 0.129412, 1)
radial_initial_angle = 198.0
radial_fill_degrees = 36.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = 75.0
offset_right = 6.0
offset_bottom = 99.0
color = Color(0.133333, 0.145098, 0.203922, 1)

[node name="Health" type="Control" parent="."]
clip_contents = true
layout_direction = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 114.0
offset_bottom = 115.0
metadata/_edit_lock_ = true

[node name="HealthBarUnder" type="TextureProgressBar" parent="Health"]
layout_mode = 0
offset_left = -105.0
offset_top = -105.0
offset_right = 105.0
offset_bottom = 105.0
value = 70.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("2")
texture_progress = ExtResource("3")
tint_under = Color(0.611765, 0.443137, 0.811765, 1)
tint_progress = Color(0.596078, 0.180392, 0.133333, 1)
radial_initial_angle = 180.0
radial_fill_degrees = 90.0
script = ExtResource("4")
metadata/_edit_lock_ = true

[node name="HealthBar" type="TextureProgressBar" parent="Health/HealthBarUnder"]
layout_mode = 0
offset_left = -1.0
offset_top = -8.0
offset_right = 211.0
offset_bottom = 211.0
value = 100.0
fill_mode = 4
nine_patch_stretch = true
texture_progress = ExtResource("5")
radial_initial_angle = 180.0
radial_fill_degrees = 90.0
metadata/_edit_lock_ = true

[node name="Energy" type="Control" parent="."]
clip_contents = true
anchors_preset = 0
offset_left = 1.0
offset_right = 128.0
offset_bottom = 121.0
metadata/_edit_lock_ = true

[node name="EnergyBarUnder" type="TextureProgressBar" parent="Energy"]
layout_mode = 0
offset_left = -105.0
offset_top = -105.0
offset_right = 105.0
offset_bottom = 105.0
value = 70.0
fill_mode = 5
nine_patch_stretch = true
texture_under = ExtResource("2")
texture_progress = ExtResource("3")
tint_under = Color(0.611765, 0.443137, 0.811765, 1)
tint_progress = Color(0.596078, 0.180392, 0.133333, 1)
radial_initial_angle = 180.0
radial_fill_degrees = 90.0
script = ExtResource("4")
metadata/_edit_lock_ = true

[node name="EnergyBar" type="TextureProgressBar" parent="Energy/EnergyBarUnder"]
layout_mode = 0
offset_left = -1.0
offset_top = -7.0
offset_right = 211.0
offset_bottom = 211.0
value = 100.0
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("6")
radial_initial_angle = 180.0
radial_fill_degrees = 90.0
metadata/_edit_lock_ = true
